# PaciDeps

./: .gitmodules  CMakeLists.txt  README.md  README.org
libs/PaciBase/: CMakeLists.txt
libs/PaciBase/pacibase/: basicmacros.h  coding_detector.cpp  coding_detector.h  pacibase.cpp  pacibase.h  pacibaseoperator.cpp  pacibaseoperator.h  padebug.h  previewlockmanager.cpp  previewlockmanager.h  property_macros.h  time_lock_defs.h.in  uilizardbrain.cpp  uilizardbrain.h
libs/PaciBase/pacibase/models/: pa_filelistmodel.h
libs/PaciCore/: CMakeLists.txt  pacicoremodel.qmodel
libs/PaciCore/bak/: configmanager.cpp  configmanager.h
libs/PaciCore/pacicore/: TimePoint.cpp  TimePoint.h  TrackManager.cpp  TrackManager.h  basic_object.cpp  basic_object.h  basicstructs.cpp  basicstructs.h  clip.cpp  clip.h  configmanager.cpp  configmanager.h  fontinfo.cpp  fontinfo.h  pacicore_global.h  sequence.cpp  sequence.h  timearea_support.h  track.cpp  track.h
libs/PaciFontDesigner/: CMakeLists.txt  paci_font_designer_resource.qrc
libs/PaciFontDesigner/Qool/FontDesigner/: QoolFontControlPane.qml  QoolFontDesignerDialog.qml  QoolFontDesignerPane.qml  QoolFontPreviewer.qml  qmldir
libs/PaciFontDesigner/Qool/FontDesigner/Controls/: FontFamilyControl_bak.qml  FontNumberControl.qml
libs/PaciFontDesigner/Qool/FontDesigner/Controls/components/: FontSelector.qml  FontSelectorFamilyButton.qml
libs/PaciFontDesigner/pacifontdesigner/: fontdesigner_global.h
libs/PaciFormat/: CMakeLists.txt  format_resources.qrc
libs/PaciFormat/bak/: csv_loader_qtcsv.cpp  csv_loader_qtcsv.h  csv_saver_qtcsv.cpp  csv_saver_qtcsv.h
libs/PaciFormat/paciformat/: baseformatoperator.cpp  baseformatoperator.h  baseloader.cpp  baseloader.h  basesaver.cpp  basesaver.h  csv_loader.cpp  csv_loader.h  csv_saver.cpp  csv_saver.h  fcp7xml_loader.cpp  fcp7xml_loader.h  fcp7xml_saver.cpp  fcp7xml_saver.h  flamexml_loader.cpp  flamexml_loader.h  flamexml_saver.cpp  flamexml_saver.h  formatconfigmanager.cpp  formatconfigmanager.h  formatprofiler.cpp  formatprofiler.h  itt_loader.cpp  itt_loader.h  itt_saver.cpp  itt_saver.h  paciformat_global.h  paciproj_common.cpp  paciproj_common.h  paciproj_loader.cpp  paciproj_loader.h  paciproj_saver.cpp  paciproj_saver.h  srt_loader.cpp  srt_loader.h  srt_saver.cpp  srt_saver.h  text_loader.cpp  text_loader.h  text_saver.cpp  (+1 more)
libs/PaciFormat/templates/: fcp7emptytree.xml  fcp7outlinetextclip.xml  fcp7plaintextclip.xml  itt_template.xml  paci_example_sequence.paci
libs/PaciFortune/: CMakeLists.txt  fortune.qrc  normal_fortunes
libs/PaciFortune/pacifortune/: pacifortune.cpp  pacifortune.h  pacifortune_global.h
